emote repository using

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=test
 APP_KEY=base64:7yQg5cP2UvKhUHepcKpxa2QnL/28k9T+0UTgFXeSwVg=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://test.laravel.com
 
 LOG_CHANNEL=stack
